[gd_scene load_steps=29 format=3 uid="uid://ddn02ng0ipkqn"]

[ext_resource type="Script" path="res://baddies/enemies/I/thrower/thrower.gd" id="1_3ai8r"]
[ext_resource type="Script" path="res://components/health/health.gd" id="1_jf4kt"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="3_d455j"]
[ext_resource type="PackedScene" uid="uid://dihwftj02yegc" path="res://components/health_indicator/health_indicator.tscn" id="3_lfnd6"]
[ext_resource type="Texture2D" uid="uid://duvpral0g7tve" path="res://assets/textures/enemies/thrower.png" id="3_uct4v"]
[ext_resource type="PackedScene" uid="uid://bitvuxp6davs1" path="res://components/player_tracker/player_tracker.tscn" id="4_387q3"]
[ext_resource type="Script" path="res://baddies/enemies/I/thrower/states/throw.gd" id="4_hgwhu"]
[ext_resource type="Script" path="res://baddies/enemies/I/thrower/states/die.gd" id="5_8xvhx"]
[ext_resource type="PackedScene" uid="uid://r22a0mmuikgy" path="res://components/blood_splatter/bleeder.tscn" id="5_jrtah"]
[ext_resource type="PackedScene" uid="uid://dvvktbgt1ayca" path="res://components/hurtbox/hurtbox.tscn" id="7_5j6dh"]
[ext_resource type="PackedScene" uid="uid://b1lcu4cgm3hjd" path="res://components/weapon/weapon_handler.tscn" id="8_26lv7"]
[ext_resource type="PackedScene" uid="uid://b0h3spmyp72xm" path="res://components/shadow/shadow.tscn" id="9_6n556"]
[ext_resource type="Script" path="res://components/weapon/collision_data/collision_data.gd" id="9_jk1an"]
[ext_resource type="Shader" path="res://components/shadow/shadow.gdshader" id="10_ae8dd"]
[ext_resource type="Script" path="res://components/weapon/weapon.gd" id="10_lxcx4"]
[ext_resource type="Resource" uid="uid://wvllr6cw8ldw" path="res://baddies/enemies/I/thrower/thrower_weapon.tres" id="11_af5sn"]
[ext_resource type="PackedScene" uid="uid://ck7giesvc1amw" path="res://components/height_sprite/height_sprite.tscn" id="11_f8ncc"]
[ext_resource type="Shader" path="res://components/flash.gdshader" id="12_c72be"]
[ext_resource type="Resource" uid="uid://d3p62hseqixjr" path="res://baddies/enemies/I/thrower/thrower_explode.tres" id="15_ugd8p"]
[ext_resource type="AudioStream" uid="uid://dun1vau5rc4l6" path="res://assets/sounds/hurt3.wav" id="20_oloc5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ty6j3"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qpcyf"]
radius = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7m11w"]
resource_local_to_scene = true
shader = ExtResource("10_ae8dd")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m1j3k"]
resource_local_to_scene = true
shader = ExtResource("12_c72be")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_1vfq7"]
radius = 16.0

[sub_resource type="Resource" id="Resource_aesdc"]
script = ExtResource("9_jk1an")
collision_layer = 32
collision_mask = 4

[sub_resource type="Resource" id="Resource_k42oi"]
script = ExtResource("9_jk1an")
collision_layer = 32
collision_mask = 4

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i1weo"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("20_oloc5")

[node name="Thrower" type="RigidBody2D" node_paths=PackedStringArray("coll_shape", "hurt_coll_shape", "health", "health_indicator", "player_tracker", "sprite", "shadow", "weapon_handler", "bleeder", "hurt_sfx")]
collision_layer = 10
collision_mask = 9
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_ty6j3")
gravity_scale = 0.0
linear_damp = 2.5
script = ExtResource("1_3ai8r")
coll_shape = NodePath("CollisionShape2D")
hurt_coll_shape = NodePath("Hurtbox/CollisionShape2D")
health = NodePath("Health")
health_indicator = NodePath("HealthIndicator")
player_tracker = NodePath("PlayerTracker")
sprite = NodePath("HeightSprite")
shadow = NodePath("Shadow")
weapon_handler = NodePath("WeaponHandler")
bleeder = NodePath("Bleeder")
hurt_sfx = NodePath("HurtSFX")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_jf4kt")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_d455j")
initial_state = NodePath("Throw")

[node name="Throw" type="Node" parent="StateMachine"]
script = ExtResource("4_hgwhu")

[node name="Die" type="Node" parent="StateMachine" node_paths=PackedStringArray("die_burst")]
script = ExtResource("5_8xvhx")
die_burst = NodePath("../../DieBurst")

[node name="HealthIndicator" parent="." instance=ExtResource("3_lfnd6")]
entity_name = "MAGE I"
radius = 16.0
name_radius = 8.0
hurt_color = Color(0, 1, 0, 0.2)
outline_color = Color(0, 1, 0, 0.2)

[node name="PlayerTracker" parent="." instance=ExtResource("4_387q3")]
color = Color(0, 1, 0, 0.501961)

[node name="Bleeder" parent="." instance=ExtResource("5_jrtah")]
blood_color = Color(0, 0.447059, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qpcyf")

[node name="Shadow" parent="." node_paths=PackedStringArray("caster") instance=ExtResource("9_6n556")]
material = SubResource("ShaderMaterial_7m11w")
texture = ExtResource("3_uct4v")
caster = NodePath("../HeightSprite")

[node name="HeightSprite" parent="." instance=ExtResource("11_f8ncc")]
material = SubResource("ShaderMaterial_m1j3k")
texture = ExtResource("3_uct4v")

[node name="Hurtbox" parent="." groups=["enemies", "throwers"] instance=ExtResource("7_5j6dh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_1vfq7")

[node name="WeaponHandler" parent="." instance=ExtResource("8_26lv7")]
collision_data = SubResource("Resource_aesdc")
weapons = Array[ExtResource("10_lxcx4")]([ExtResource("11_af5sn")])

[node name="DieBurst" parent="." instance=ExtResource("8_26lv7")]
muzzle_distance = 0.0
muzzle_is_origin = false
collision_data = SubResource("Resource_k42oi")
weapons = Array[ExtResource("10_lxcx4")]([ExtResource("15_ugd8p")])

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_i1weo")
volume_db = -10.0
max_distance = 512.0
bus = &"sfx"

[connection signal="has_died" from="Health" to="StateMachine/Die" method="_on_health_has_died"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="knocked_back" from="Hurtbox" to="." method="_on_hurtbox_knocked_back"]
[connection signal="recoiled" from="WeaponHandler" to="." method="_on_weapon_handler_recoiled"]
